# Greeum

./: .gitignore  2025-FUTURE-DEPLOY-PLAN.md  AGENTS.md  ALPHA_VERSION_CHECKLIST.md  CHANGELOG.md  CI_IMPROVEMENT_AREAS.md  CLAUDE.md  CLAUDE_MD_GREEUM_SECTION.md  COMPREHENSIVE_IMPROVEMENT_ROADMAP.md  CRITICAL_STM_ISSUES_FIX.md  DEAD_CODE_REPORT.md  DEPLOYMENT_CHECKLIST_v2.0.4.md  DEPLOYMENT_SUCCESS_v2.0.4.md  DESIGN-DOCUMENT.md  EMBEDDING_AUDIT.md  FAST_FEEDBACK_GUIDE.md  GREEUM_MCP_USER_GUIDE.md  GREEUM_MEMORY_USAGE_GUIDELINES.md  GREEUM_USAGE_GUIDE_EXTERNAL.md  GREEUM_V2.0.4_LIGHTWEIGHT_PLAN.md  GREEUM_V2_MIGRATION_SPEC.md  HYBRID_ARCHITECTURE_MIGRATION_PLAN.md  IMPLEMENTATION_PLAN_v3.1.1a1.md  IMPLEMENTATION_STATUS_v3.1.1a1.md  INSTALLATION.md  LICENSE  MCP_CONNECTION_GUIDE.md  MCP_INTEGRATION_ROADMAP.md  MISSING_API_IMPLEMENTATION_DESIGN.md  NATIVE_MCP_DESIGN_SPEC.md  PERFORMANCE_TEST_IMPLEMENTATION_PLAN.md  PHASE_1_2_FINAL_VERIFICATION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_DESIGN_DOCUMENT.md  PHASE_3_CHECKPOINT_DESIGN.md  PHASE_3_COMPLETION_REPORT.md  PROGRESSIVE_REPLACEMENT_PLAN.md  PROGRESS_CHECKLIST.md  README.md  (+74 more)
.tmp_data/: memory.db
.venv_test/: pyvenv.cfg
Design/: architecture_reform_plan.md
GREEUM-TEST/: GREEUM-TEST-PLAN.md
api/: app.py  memory_api.py
benchmark/: legacy_graph_system.py  optimized_benchmark.py  performance_analysis.py  performance_benchmark.py  ultra_optimized_benchmark.py
cli/: memory_cli.py
data/: anchor_33771_graph.jsonl  anchor_33772_graph.jsonl  anchor_33777_graph.jsonl  anchor_33787_graph.jsonl  anchor_33793_graph.jsonl  anchor_33794_graph.jsonl  anchor_33828_graph.jsonl  anchor_33829_graph.jsonl  anchor_33830_graph.jsonl  anchor_33831_graph.jsonl  anchor_33832_graph.jsonl  anchor_33839_graph.jsonl  anchor_33891_graph.jsonl  anchor_33894_graph.jsonl  anchor_33902_graph.jsonl  anchors.json  anchors_final_test.json  anchors_test_low_threshold.json  block_memory.jsonl  context_cache.json  graph_final_test.jsonl  graph_snapshot.jsonl  graph_test_low_threshold.jsonl  integration_test_cache.json  memory.db-shm  memory.db-wal  memory.db.bak_20250922_171328  review_test_cache.json  short_term.json  test.json  test_alpha_beta_gamma.jsonl  test_alpha_beta_gamma_anchors.json  test_anchors.json  test_anchors_low.json  test_bootstrap.jsonl  test_bootstrap_low.jsonl  test_cache.json  test_cache_simple.json  test_e2e_anchors.json  test_e2e_graph.jsonl
docs/: GREEUM_V4_MIGRATION_TASKS.md  GREEUM_V4_VISION.md  LEGACY_NOTES.md  QUICKSTART.md  README_ko.md  ROADMAP.md  anchors-guide.md  api-reference.md  branch_upgrade_checklist.md  claude-setup.md  db_write_queue_design.md  developer_guide.md  get-started.md  greeum-workflow-guide.md  installation.md  perf_tuning_checklist.md  pytest-markers-guide.md  troubleshooting.md  tutorials.md  v2.3-roadmap.md  v253_actant_design.md  v253_ai_migration_design.md  v253_compatible_design.md  v253_migration_complete.md  v253_migration_safety.md  whats-new.md
examples/: Dockerfile  README.md  client_basic_usage.py  llm_integration.py  mcp_example.py  multi_environment.py  simplified_client_usage.py
greeum/: __init__.py  block_manager.py  cache_manager.py  cli.py  client.py  config_store.py  database_manager.py  embedding_models.py  knowledge_graph.py  memory_evolution.py  prompt_wrapper.py  temporal_reasoner.py  text_utils.py  token_utils.py  utils.py
list-tools/: context_cache.json
memory_engine/: __init__.py  cli.py  client.py  database_manager.py  mcp_client.py  mcp_integrations.py  mcp_service.py  memory_evolution.py  prompt_wrapper.py  stm_manager.py  temporal_reasoner.py
results/: analysis_20250517_221130.json  analysis_20250517_222724.json  analysis_20250518_005801.json  analysis_20250518_010253.json  benchmark_results_20250517_141009.json  benchmark_results_20250517_141350.json  benchmark_results_20250518_011413.json  benchmark_results_20250518_012011.json  benchmark_results_20250518_020138.json  benchmark_results_20250518_021118.json  benchmark_results_20250518_022422.json  benchmark_results_20250518_022949.json  benchmark_results_20250518_023624.json  benchmark_results_20250518_024224.json  (+7 more)
(+305 files in other folders)
